# blender-fractals

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  TODO.txt  __init__.py  dragon.py  fractal.py  fractalgen.py  test_any.py  vector.py
docs/: axis_rotate.txt
examples/: sierpinski.txt  testrandom.txt
examples/3d/: cube_chain.txt  cubeception.txt  menge.txt
examples/standard/: 3fold.txt  sierpinski.txt
fractal_cpp/: .clang_complete  CMakeLists.txt  Doxyfile.in  HOWTO.txt  Makefile  build.sh  fractal.pyx  fractalgen.cpp  fractalgen.h  lgrammarVisitor.cpp  lgrammarVisitor.h  literal.cpp  literal.h  main.cpp  setup.py  test.py
fractal_cpp/auxiliary/: CMakeLists.txt
fractal_cpp/auxiliary/cython/: CMakeLists.txt  fractalgen.cpp  fractalgen.pyx  fractalgen_fast.pyx  fractalgen_slow.pyx
fractal_cpp/auxiliary/parsing/: CMakeLists.txt  lsystem.l  lsystem.y  lsystemLexer.g4  lsystemParser.g4  lsystemParser.yy
fractal_cpp/auxiliary/parsing/flex-bison/: lsystem.l
fractal_cpp/benchmarks/: CMakeLists.txt  main.cpp  whole.cpp
fractal_cpp/cmake/: ExternalAntlr4Cpp.cmake  ExternalGoogleBenchmarks.cmake  antlr.cmake  compile_module.cmake
fractal_cpp/cmake-local/: ExternalAntlr4Cpp.cmake
fractal_cpp/fuzzer/: CMakeLists.txt  dict.txt  main.cpp
fractal_cpp/include/fractal/: faces.h  fractal.h  linalg_helper.h  linalg_helper.tpp  mesh_info.h  meshinfo.h
fractal_cpp/include/generator/: commandhandler.h  fractalgen.h  fractalgen_commands.tpp  fractaltimer.h
fractal_cpp/include/master/: config.h
fractal_cpp/include/visitor/: lgrammarVisitor.h  literal.h  nonterminal.h  ntholder.h  terminal.h
fractal_cpp/lib/: CMakeLists.txt
fractal_cpp/lib/fractal/: CMakeLists.txt  linalg_helper.cpp
fractal_cpp/lib/generator/: CMakeLists.txt  commandhandler.cpp  fractalgen.cpp  fractalgen_commands.cpp
fractal_cpp/lib/visitor/: CMakeLists.txt  literal.cpp  nonterminal.cpp
fractal_cpp/parsing/: Makefile
fractal_cpp/tests/: CMakeLists.txt  config.h.in  fractalgen.cpp  linalg.cpp  main.cpp  random.cpp  valarray_comp.h  whole.cpp
lsystem/: Makefile  __init__.py  lgrammarVisitor.py  literal_semantic.py  lsystem.g4  lsystem.py  lsystem_class.py  lsystem_parse.py  testfile.txt
lsystem/lgrammar/: Makefile  __init__.py  lsystem.g4  lsystem.tokens  lsystemLexer.py  lsystemLexer.tokens  lsystemListener.py  lsystemParser.py  lsystemVisitor.py  testfile.txt
test_grammars/: a.txt  dragon.txt  koch.txt  plant.txt  sierpinski.txt  snowflake.txt  spiral.txt
test_grammars/3d/: cube_chain.txt  spiral.txt
tests/: grammar_output.py  test.py  test_any.py  test_lsystem_iterate.py
